# vger

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  borg-rs.example.yaml  optimization research.md  performance-findings-rest.md  testing.md  vger.example.yaml  vykar.example.yaml
.agents/: settings.local.json
.agents/skills/architecture-review/: SKILL.md
.agents/skills/e2e-tests/: SKILL.md  benchmarks.md  stress.md
.agents/skills/performance-review/: SKILL.md
.agents/skills/release/: SKILL.md
.agents/skills/security-review/: SKILL.md
.cargo/: config.toml
.claude/: settings.local.json
.claude/commands/: architecture-review.md  e2e-tests.md  performance-review.md  security-review.md
.claude/commands/e2e-tests/: SKILL.md  benchmarks.md  benchmarks_chart.py  stress.md
.github/workflows/: ci-main.yml  fuzz.yml  release.yml
crates/borg-cli/: Cargo.toml
crates/borg-cli/src/: main.rs
crates/borg-core/: Cargo.toml
crates/borg-core/src/: config.rs  error.rs  lib.rs  testutil.rs
crates/borg-core/tests/: integration.rs
crates/borg-server/: Cargo.toml
crates/borg-server/src/: config.rs  main.rs  state.rs
crates/vger-cli/: Cargo.toml
crates/vger-cli/src/: cli.rs  config_gen.rs  dispatch.rs  hooks.rs  main.rs  passphrase.rs  progress.rs  prompt.rs
crates/vger-cli/src/cmd/: backup.rs  break_lock.rs  check.rs  compact.rs  daemon.rs  delete.rs  extract.rs  info.rs  init.rs  list.rs  mod.rs  mount.rs  prune.rs  restore.rs  snapshot.rs
crates/vger-cli/tests/: cli_integration.rs  memory_integration.rs
crates/vger-core/: Cargo.toml
crates/vger-core/src/: config.rs  error.rs  hooks.rs  lib.rs  limits.rs  prune.rs  testutil.rs
crates/vger-core/src/app/: mod.rs  operations.rs  passphrase.rs  scheduler.rs
crates/vger-core/src/archive/: mod.rs
crates/vger-core/src/commands/: backup.rs  check.rs  compact.rs  create.rs  delete.rs  delete_repo.rs  extract.rs  find.rs  info.rs  init.rs  list.rs  mod.rs  mount.rs  pipeline.rs  prune.rs  restore.rs  snapshot_ops.rs  util.rs
crates/vger-core/src/commands/backup/: chunk_process.rs  command_dump.rs  commit.rs  concurrency.rs  mod.rs  pipeline.rs  sequential.rs  walk.rs
crates/vger-core/src/compress/: mod.rs
crates/vger-core/src/config/: defaults.rs  hooks.rs  limits.rs  mod.rs  resolve.rs  sources.rs  types.rs  util.rs
crates/vger-core/src/crypto/: aes_gcm.rs  chacha20_poly1305.rs  key.rs  mod.rs
crates/vger-core/src/index/: dedup_cache.rs  mod.rs
crates/vger-core/src/platform/: fs.rs  mod.rs  shell.rs
crates/vger-core/src/repo/: file_cache.rs  format.rs  lock.rs  manifest.rs  mod.rs  pack.rs  write_session.rs
crates/vger-core/src/snapshot/: item.rs  mod.rs
crates/vger-core/src/storage/: local_backend.rs  mod.rs  opendal_backend.rs  rest_backend.rs  s3_backend.rs  sftp_backend.rs
crates/vger-core/src/tests/: app_ops.rs  check_command.rs  chunk_id.rs  chunker.rs  compact.rs  compress.rs  crypto.rs  delete.rs  delete_repo.rs  format.rs  helpers.rs  index.rs  item.rs  key.rs  lock.rs  manifest.rs  mod.rs  passphrase.rs  prune.rs  prune_command.rs  repo.rs  util_lock.rs
crates/vger-core/tests/: integration.rs  lifecycle_integration.rs
crates/vger-crypto/: Cargo.toml
crates/vger-crypto/src/: aes_gcm.rs  chacha20_poly1305.rs  key.rs  lib.rs  select.rs
crates/vger-gui/: Cargo.toml
crates/vger-gui/macos/: Info.plist  create-icns.sh
crates/vger-gui/src/: main.rs  progress.rs  state.rs
crates/vger-protocol/: Cargo.toml
crates/vger-protocol/src/: lib.rs
crates/vger-server/: Cargo.toml
crates/vger-server/src/: config.rs  main.rs  quota.rs  state.rs
crates/vger-server/src/handlers/: admin.rs  locks.rs  mod.rs  objects.rs  test_helpers.rs
crates/vger-storage/: Cargo.toml
crates/vger-storage/src/: http_util.rs  lib.rs  local_backend.rs  rest_backend.rs  retry.rs  s3_backend.rs  sftp_backend.rs
crates/vger-types/: Cargo.toml
crates/vger-types/src/: chunk_id.rs  error.rs
crates/vykar-cli/: Cargo.toml
crates/vykar-cli/src/: cli.rs  config_gen.rs  dispatch.rs  format.rs  main.rs  progress.rs  signal.rs  table.rs
crates/vykar-cli/tests/: cli_integration.rs
crates/vykar-common/: Cargo.toml
crates/vykar-common/src/: display.rs  lib.rs
crates/vykar-core/: Cargo.toml
crates/vykar-core/src/: limits.rs
crates/vykar-core/tests/: integration.rs  lifecycle_integration.rs  single_file_source.rs
crates/vykar-crypto/: Cargo.toml
crates/vykar-crypto/src/: key.rs
crates/vykar-gui/: Cargo.toml  build.rs
crates/vykar-gui/linux/: vykar-gui.desktop
crates/vykar-gui/macos/: Info.plist
crates/vykar-gui/src/: autostart.rs  main.rs  (+10 more)
crates/vykar-protocol/: Cargo.toml
crates/vykar-server/: Cargo.toml
crates/vykar-storage/: Cargo.toml
crates/vykar-types/: Cargo.toml
docs/: book.toml  custom.css  path-normalize.js
docs/src/: SUMMARY.md  architecture.md  backends.md  backup.md  commands.md  configuration.md  daemon.md  design.md  goals.md  gui.md  index.md  init-setup.md  install.md  install.sh  maintenance.md  quickstart.md  recipes.md  restore.md  roadmap.md  server-internals.md  server-mode.md  server-setup.md
docs/theme/: head.hbs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_decompress.rs  fuzz_file_cache_decode.rs  fuzz_item_stream.rs  fuzz_msgpack_index_blob.rs  fuzz_msgpack_snapshot_meta.rs  fuzz_pack_scan.rs  fuzz_unpack_object.rs  generate_corpus.rs
scripts/: README.md  benchmark.sh  benchmark_report.py  build-appimage.sh  build-release-windows.ps1  build-release.sh  macos-sign-app.sh  macos-sign.sh  mariadb-generate-random-data.sh  mongodb-generate-random-data.sh  postgres-generate-random-data.sh  profile.sh  stress-cli.sh  stress.sh  windows-sign.sh
scripts/benchmarks/: .gitignore  pyproject.toml
scripts/benchmarks/benchmark_runner/: cli.py  defaults.py  host.py  runner.py  tools.py
scripts/benchmarks/tests/: __init__.py  test_cli.py  test_report.py  test_runner.py
scripts/lib/: common.sh  defaults.sh  vger-repo.sh  vykar-repo.sh
scripts/scenarios/: pyproject.toml
(+227 files in other folders)
