[workspace]
members = [
    "crates/vger-core",
    "crates/vger-cli",
    "crates/vger-server",
    "crates/vger-gui",
    "crates/vger-protocol",
]
resolver = "2"

[workspace.dependencies]
# Internal crates
vger-core = { path = "crates/vger-core" }
vger-protocol = { path = "crates/vger-protocol" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Crypto
blake2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
crossbeam-channel = "0.5"
tokio = "1"

# Testing
tempfile = "3"

[workspace.lints.rust]

[workspace.lints.clippy]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = 2
strip = "none"
