[package]
name = "vger-cli"
version = "0.6.0"
edition = "2021"
license = "GPL-3.0-only"

[[bin]]
name = "vger"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
vger-core = { workspace = true, features = ["mount", "backend-sftp"] }
clap.workspace = true
serde.workspace = true
serde_yaml.workspace = true
rpassword = "7"
tracing.workspace = true
tracing-subscriber.workspace = true
comfy-table = "7"
chrono.workspace = true
hex.workspace = true
rand.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
