[package]
name = "vger-core"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rmp-serde = "1"

# Crypto
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
blake2 = "0.10"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"

# Compression
lz4_flex = "0.11"
zstd = "0.13"

# Chunking
fastcdc = "3"

# Storage
opendal = { version = "0.51", features = ["services-fs", "services-s3", "layers-blocking", "layers-throttle"] }
url = "2"

# Filesystem
globset = "0.4"
ignore = "0.4"
filetime = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# OS
nix = { version = "0.29", features = ["fs", "user"] }
xattr = "1"
hostname = "0.4"
whoami = "1"
dirs = "6"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
rayon = "1"

# HTTP client (REST backend)
ureq = { version = "2", features = ["json"], optional = true }

# Mount (WebDAV server)
dav-server = { version = "0.10", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"] }
hyper = { version = "1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
lru = { version = "0.12", optional = true }
bytes = { version = "1", optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = []
backend-rest = ["ureq"]
backend-sftp = ["opendal/services-sftp"]
mount = ["dav-server", "tokio/rt-multi-thread", "tokio/macros", "tokio/signal", "tokio/net", "hyper", "hyper-util", "lru", "bytes", "futures-util"]

[dev-dependencies]
tempfile = "3"
