[package]
name = "vger-core"
version = "0.7.1"
edition = "2021"
license = "GPL-3.0-only"

[lints]
workspace = true

[dependencies]
# Internal
vger-protocol.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
rmp = "0.8"
rmp-serde = "1"

# Crypto
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
blake2.workspace = true
argon2 = "0.5"
rand.workspace = true
zeroize.workspace = true
hex.workspace = true

# Compression
lz4_flex = "0.11"
zstd = "0.13"

# Chunking
fastcdc = "3"

# Storage
opendal = { version = "0.51", features = ["services-s3", "layers-blocking", "layers-throttle"] }
url = "2"

# Filesystem
tempfile.workspace = true
globset = "0.4"
ignore = "0.4"

# Time
chrono.workspace = true

# Memory-mapped I/O
memmap2 = "0.9"

# Probabilistic filter
xorf = "0.12"

# Small-vec optimization
smallvec = "1"

# Error handling
thiserror = "2"

# Logging
tracing.workspace = true
rayon = "1"
crossbeam-channel.workspace = true

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread"] }

# HTTP client (REST backend)
ureq = { version = "2", features = ["json"], optional = true }

# SSH/SFTP (direct russh implementation)
russh = { version = "0.54", default-features = false, features = ["aws-lc-rs"], optional = true }
russh-sftp = { version = "2.1", optional = true }

# Mount (WebDAV server)
dav-server = { version = "0.10", optional = true }
hyper = { version = "1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
lru = { version = "0.12", optional = true }
bytes = { version = "1", optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = ["backend-rest"]
backend-rest = ["ureq"]
backend-sftp = ["russh", "russh-sftp"]
mount = ["dav-server", "tokio/rt-multi-thread", "tokio/macros", "tokio/signal", "tokio/net", "hyper", "hyper-util", "lru", "bytes", "futures-util"]

[dev-dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["fs", "hostname", "user", "signal", "process"] }
xattr = "1"
