[package]
name = "vger-crypto"
version = "0.7.1"
edition = "2021"
license = "GPL-3.0-only"

[lints]
workspace = true

[dependencies]
# Internal
vger-types.workspace = true

# Crypto
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
blake2.workspace = true
rand.workspace = true
zeroize.workspace = true

# Serialization
serde.workspace = true
rmp-serde.workspace = true
