[package]
name = "vger-gui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[[bin]]
name = "vger-gui"
path = "src/main.rs"

[dependencies]
vger-core = { path = "../vger-core" }
slint = { version = "1.13", default-features = true }
tray-icon = "0.21"
notify = "6.1"
crossbeam-channel = "0.5"
tinyfiledialogs = "3"
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
