[package]
name = "vger-gui"
version = "0.6.0"
edition = "2021"
license = "GPL-3.0-only"

[[bin]]
name = "vger-gui"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
vger-core.workspace = true
slint = { version = "1.13", default-features = true }
tray-icon = "0.21"
notify = "6.1"
crossbeam-channel.workspace = true
tinyfiledialogs = "3"
chrono.workspace = true
zeroize.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
