[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmark-runner"
version = "0.1.0"
description = "Benchmark orchestration for vykar tool comparisons"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9,<4",
    "numpy>=2.0,<3",
]

[tool.setuptools]
packages = ["benchmark_runner"]

[project.scripts]
benchmark-runner = "benchmark_runner.cli:main"
benchmark-report = "benchmark_runner.report:main"
